--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <meta name="Visiter le Québec"
     content="Vous trouverez une foule d'information nécessaire à la planification d'un road trip au Québec">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- TODO Erreur validation -->
-  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
   <meta name="theme-color" content="#1472BF">
   <title>Visiter le Québec</title>
   <link rel="stylesheet" href="./style/css/normalize.css">
@@ -291,11 +289,10 @@
     </section>
 
     <section class='container grid grid-cols-12 mx-auto mt-8 p-6'>
-
+      <h2 class="hidden">Bouton pour installer ce site</h2>
       <button
         class="nav-link col-span-8 col-start-3 mt-5 rounded-full bg-blue-600 hover:bg-blue-800 focus:bg-blue-800 px-12 py-4 text-white"
         id="installBtn" aria-label="installBtn" hidden>Installer Visiter le Québec</button>
-
     </section>
 
   </main>
