corriger lien du sous-menu

--- a/quoi-faire.html
+++ b/quoi-faire.html
@@ -52,66 +52,67 @@
               en été</button>
           </a>
         </li> -->
-        <li class="col-span-12">
-          <a href="#" class="p-4 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
+        <li class="col-span-12 py-2">
+          <a href="#" class="p-2 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
             Activité en été
           </a>
         </li>
-        <li class="col-span-12">
-          <a href="#" class="p-4 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
+        <li class="col-span-12 py-2">
+          <a href="#" class="p-2 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
             Quoi faire l'automne
           </a>
         </li>
-        <li class="col-span-12">
-          <a href="#" class="p-4 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
+        <li class="col-span-12 py-2">
+          <a href="#" class="p-2 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
             Jouer dehors l'hiver
           </a>
         </li>
-        <li class="col-span-12">
-          <a href="#" class="p-4 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
+        <li class="col-span-12 py-2">
+          <a href="#" class="p-2 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
             Bienvenue printemps
           </a>
         </li>
       </ul>
       <p class="border-gray-100 shadow-sm text-xl my-6">Où aller</p>
       <ul class="grid grid-cols-12">
-        <li class="col-span-12">
+        <li class="col-span-12 py-2">
           <a href="ou-aller.html#rive-sud"
-            class="p-4 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
+            class="p-2 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
             Rive-sud du fleuve
           </a>
         </li>
-        <li class="col-span-12">
-          <a href="#" class="p-4 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
+        <li class="col-span-12 py-2">
+          <a href="ou-aller.html#rive-nord"
+            class="p-2 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
             Rive-nord du fleuve
           </a>
         </li>
-        <li class="col-span-12">
-          <a href="#" class="p-4 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
+        <li class="col-span-12 py-2">
+          <a href="#" class="p-2 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
             Gaspésie
           </a>
         </li>
-        <li class="col-span-12">
-          <a href="#" class="p-4 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
+        <li class="col-span-12 py-2">
+          <a href="#" class="p-2 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
             Côte-Nord
           </a>
         </li>
-        <li class="col-span-12">
-          <a href="#" class="p-4 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
-            Eeyou Istchee Baie-James
+        <li class="col-span-12 py-2">
+          <a href="#" class="p-2 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
+            Baie-James
           </a>
         </li>
-        <li class="col-span-12">
-          <a href="#" class="p-4 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
+        <li class="col-span-12 py-2">
+          <a href="#" class="p-2 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
             Iles-de-la-Madeleine
           </a>
         </li>
       </ul>
       <div class="border-gray-100 shadow-sm text-xl my-6">
-        <a href="ou-aller.html#vos-spots"
-          class="p-4 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
-          Pour faire connaitre vos endroits préférés
-        </a>
+        <div class="p-2 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
+          <a href="ou-aller.html#vos-spots" class="">Pour faire
+            connaitre vos endroits préférés</a>
+        </div>
       </div>
     </aside>
 
@@ -160,7 +161,7 @@
                 du fleuve</a>
             </li>
             <li>
-              <a href="#"
+              <a href="ou-aller.html#rive-nord"
                 class="block px-4 py-2 hover:bg-blue-200 dark:hover:bg-gray-600 dark:hover:text-white text-xl">Rive-nord
                 du fleuve</a>
             </li>
