--- a/quoi-faire.html
+++ b/quoi-faire.html
@@ -88,22 +88,26 @@
           </a>
         </li>
         <li class="col-span-12 py-2">
-          <a href="#" class="p-2 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
+          <a href="ou-aller.html#far-away"
+            class="p-2 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
             Gaspésie
           </a>
         </li>
         <li class="col-span-12 py-2">
-          <a href="#" class="p-2 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
+          <a href="ou-aller.html#far-away"
+            class="p-2 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
             Côte-Nord
           </a>
         </li>
         <li class="col-span-12 py-2">
-          <a href="#" class="p-2 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
+          <a href="ou-aller.html#far-away"
+            class="p-2 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
             Baie-James
           </a>
         </li>
         <li class="col-span-12 py-2">
-          <a href="#" class="p-2 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
+          <a href="ou-aller.html#madeleine"
+            class="p-2 rounded-lg hover:bg-white focus:bg-white focus:outline-none w-full text-start">
             Iles-de-la-Madeleine
           </a>
         </li>
