--- a/ou-aller.html
+++ b/ou-aller.html
@@ -351,46 +351,10 @@
             aria-labelledby="outaouais-tab">
             <div class="grid grid-cols-12 mx-auto p-6 gap-x-4">
 
-              <!-- Carte Rivière la guerre-->
-              <div
-                class="col-span-12 2xl:col-span-6 mx-auto  py-4 px-8 bg-white shadow-lg rounded-lg mt-20 ou-aller--bg sm:bg-none">
-                <div class="flex justify-center md:justify-end -mt-16">
-                  <img class="w-20 h-20 object-cover rounded-full border-2 border-indigo-500"
-                    src="./img/pastilles/photographie.png" alt="Pastille représentent la photographie">
-                </div>
-                <div class="flex flex-col  md:flex-row">
-                  <div class="md:block md:w-1/3 md:pr-4 self-center pb-4 md:pb-0">
-                    <img class="rounded-lg self-center" src="./img/ou-aller/riviere-la-guerre.jpg"
-                      alt="Une église en ruine">
-                  </div>
-                  <div class="md:w-2/3">
-                    <p class="text-gray-800 text-3xl font-semibold">Rivière-La Guerre</p>
-                    <p class="mt-2 text-gray-600">Photographie</p>
-                    <p class="mt-2 text-gray-600">Rivière-La Guerre, parfois simplement LaGuerre, était un village de la
-                      municipalité régionale de comté Haut-Saint-Laurent, en Montérégie, au Québec dans l'Est du Canada
-                    </p>
-                    <p class="mt-2 text-gray-600">1498 Chem. de la Rivière-La Guerre, Saint-Anicet, QC J0S 1M0</p>
-                  </div>
-                </div>
-              </div>
+              <!-- Ajouter card-->
+              <div>Outaouais</div>
 
-              <!-- Carte La Galerie Coccinelle-->
-              <div
-                class="col-span-12 lg:col-span-6 mx-auto  py-4 px-8 bg-white shadow-lg rounded-lg mt-20 ou-aller--bg sm:bg-none w-full">
-                <div class="flex justify-end -mt-16">
-                  <img class="w-20 h-20 object-cover rounded-full border-2 border-indigo-500"
-                    src="./img/pastilles/alimentation-pastille.png" alt="Pastille représentent un panier d'achat">
-                </div>
-                <div class="flex flex-col  md:flex-row">
-                  <div>
-                    <p class="text-gray-800 text-3xl font-semibold">La Galerie Coccinelle</p>
-                    <p class="mt-2 text-gray-600">Belle boutique</p>
-                    <p class="mt-2 text-gray-600">Recommandé par Mélanie, a voir!
-                    </p>
-                    <p class="mt-2 text-gray-600">3200 Bd Laframboise, Saint-Hyacinthe, QC J2S 4Z5</p>
-                  </div>
-                </div>
-              </div>
+
             </div>
           </div>
 
