Un vrai dernier correctif

--- a/ou-aller.html
+++ b/ou-aller.html
@@ -352,7 +352,7 @@
             <div class="grid grid-cols-12 mx-auto p-6 gap-x-4">
 
               <!-- Ajouter card-->
-              <div>Outaouais</div>
+              <div class="col-span-12">Outaouais</div>
 
 
             </div>
@@ -364,7 +364,7 @@
             <div class="grid grid-cols-12 mx-auto p-6 gap-x-4">
 
               <!-- Ajouter card d'endroits ici-->
-              <div>Laurentides</div>
+              <div class="col-span-12">Laurentides</div>
 
 
             </div>
@@ -376,7 +376,7 @@
             <div class="grid grid-cols-12 mx-auto p-6 gap-x-4">
 
               <!-- Ajouter card-->
-              <div>lanaudiere</div>
+              <div class="col-span-12">lanaudiere</div>
 
             </div>
           </div>
@@ -387,7 +387,7 @@
             <div class="grid grid-cols-12 mx-auto p-6 gap-x-4">
 
               <!-- Ajouter card ici-->
-              <div>capital-national</div>
+              <div class="col-span-12">capital-national</div>
 
 
             </div>
@@ -399,7 +399,7 @@
             <div class="grid grid-cols-12 mx-auto p-6 gap-x-4">
 
               <!-- Ajouter card ici-->
-              <div>Saguenay</div>
+              <div class="col-span-12">Saguenay</div>
 
 
             </div>
@@ -448,7 +448,7 @@
             <div class="grid grid-cols-12 mx-auto p-6 gap-x-4">
 
               <!-- Ajouter card ici-->
-              <div>Gaspésie</div>
+              <div class="col-span-12">Gaspésie</div>
 
 
             </div>
@@ -460,7 +460,7 @@
             <div class="grid grid-cols-12 mx-auto p-6 gap-x-4">
 
               <!-- Ajouter card d'endroits ici-->
-              <div>Côte-Nord</div>
+              <div class="col-span-12">Côte-Nord</div>
 
 
             </div>
@@ -472,7 +472,7 @@
             <div class="grid grid-cols-12 mx-auto p-6 gap-x-4">
 
               <!-- Ajouter card-->
-              <div>Abitibi-Téminscamingue</div>
+              <div class="col-span-12">Abitibi-Téminscamingue</div>
 
             </div>
           </div>
@@ -483,7 +483,7 @@
             <div class="grid grid-cols-12 mx-auto p-6 gap-x-4">
 
               <!-- Ajouter card ici-->
-              <div>Nord du Québec</div>
+              <div class="col-span-12">Nord du Québec</div>
 
 
             </div>
@@ -532,7 +532,7 @@
             <div class="grid grid-cols-12 mx-auto p-6 gap-x-4">
 
               <!-- Ajouter card ici-->
-              <div>Ile havre-aubert</div>
+              <div class="col-span-12">Ile havre-aubert</div>
 
             </div>
           </div>
@@ -543,7 +543,7 @@
             <div class="grid grid-cols-12 mx-auto p-6 gap-x-4">
 
               <!-- Ajouter card d'endroits ici-->
-              <div>Ile du Cap aux Meules</div>
+              <div class="col-span-12">Ile du Cap aux Meules</div>
 
 
             </div>
@@ -555,7 +555,7 @@
             <div class="grid grid-cols-12 mx-auto p-6 gap-x-4">
 
               <!-- Ajouter card-->
-              <div>Ile du Havre aux Maisons</div>
+              <div class="col-span-12">Ile du Havre aux Maisons</div>
 
             </div>
           </div>
@@ -566,7 +566,7 @@
             <div class="grid grid-cols-12 mx-auto p-6 gap-x-4">
 
               <!-- Ajouter card ici-->
-              <div>Ile de la Grande Entrée</div>
+              <div class="col-span-12">Ile de la Grande Entrée</div>
 
 
             </div>
